# tdge

./: .gitignore  CMakeLists.txt  output.txt
cmake/: FetchSDL2WebGPU.cmake
src/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  shader.cpp  shader.h  shader_reflect.cpp  triangle.wgsl
tdge/: CMakeLists.txt  arcball_camera.cpp  arcball_camera.h  engine.cpp  engine.h  main.cpp  shader.cpp  shader.h  shader_reflect.cpp  triangle.wgsl  utils.cpp  utils.h
tdge/shaders/: texture.wgsl  triangle.wgsl
